Changes to be committed: 	modified:   TODO 	modified:   prove/js/electromagneticSpectrum.js

--- a/TODO
+++ b/TODO
@@ -3,6 +3,5 @@ Spiegazione
 Impaginazione
 
 Fixare i bug
--alcuni colori fanno esplodere il grafico(rosso,bianco e nero)
--se si carica un'altra immagine non viene cancellata quella precedente
+-alcuni colori fanno esplodere il grafico(bianco e nero)
 -mettere a posto le dimensioni
