modified:   TODO 	modified:   prove/index.html 	deleted:    prove/js/contents.js 	modified:   prove/js/electromagneticSpectrum.js

--- a/TODO
+++ b/TODO
@@ -5,3 +5,4 @@ Impaginazione
 Fixare i bug
 -alcuni colori fanno esplodere il grafico(bianco e nero)
 -mettere a posto le dimensioni
+-i valori del grafico sono un po sballati rispetto al sito originale
