--- a/TODO
+++ b/TODO
@@ -10,3 +10,9 @@ Fixare i bug
 cose da fare opzionali 
 +Zoom (https://codepen.io/Zupup/pen/dyqprJK)
 +Griglia con i pixel
+
+aggiungere un'immagine di default
+aggiugnere un'immagine gradiente di default
+
+Style:
+-cambiare i colori delle parole nel titolo
